# totalreclaw

./: .env.example  .gitignore  AUDIT-SESSION.md  CHANGELOG-public.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  REPO-MAPPING.md  SECURITY.md  TASKS.md  cliff.toml  requirements.txt
ombh/: .env.example  Dockerfile.openclaw-lancedb  Dockerfile.openclaw-mem0  Dockerfile.openclaw-totalreclaw  Dockerfile.openclaw-totalreclaw-v1  README.md  docker-compose.benchmark.yml  docker-compose.testbed.yml  embedding-stub.ts  pyproject.toml
ombh/configs/openclaw-lancedb/: config.json5
ombh/configs/openclaw-mem0/: config.json5
ombh/configs/openclaw-qmd/: config.json5
ombh/configs/openclaw-totalreclaw-v1/: config.json5
ombh/ombh/: __init__.py  __main__.py  cli.py
ombh/ombh/backends/: __init__.py  base.py  mem0_platform.py  openclaw_mem0.py  openclaw_qmd.py  registry.py  totalreclaw_e2ee.py
ombh/ombh/config/: config.yaml  mem0.yaml  qmd.yaml
ombh/ombh/dataset/: __init__.py  loader.py  synthetic.py
ombh/ombh/llm/: __init__.py  client.py  extractor.py  prompts.py
ombh/ombh/simulator/: __init__.py  nodes.py  orchestrator.py
ombh/scripts/: generate_5way_report.py  generate_synthetic_benchmark.py  ingest_v1.py  regenerate_queries_for_ingested.py  run_benchmark.py
ombh/synthetic-benchmark/: .checkpoint.json  README.md
ombh/synthetic-benchmark/benchmark-results/: .benchmark-checkpoint.json  5-way-report.md  benchmark-metrics-12bit-28t.json  benchmark-metrics-4way.json  benchmark-metrics-5way.json  benchmark-metrics-v1.json  benchmark-metrics.json  ingest-results-12bit-28t.json  ingest-results-v1.json  ingest-results.json  query-results-12bit-28t.json  query-results-4way.json  query-results-v1.json  query-results.json  v2-improvement-comparison.md  v2-lsh-tuning-comparison.md
ombh/synthetic-benchmark/conversations/: conv-0001.jsonl  conv-0001.meta.json  conv-0002.jsonl  conv-0002.meta.json  conv-0003.jsonl  conv-0003.meta.json  conv-0004.jsonl  conv-0004.meta.json  conv-0005.jsonl  conv-0005.meta.json  conv-0006.jsonl  conv-0006.meta.json  conv-0007.jsonl  conv-0007.meta.json  conv-0008.jsonl  conv-0008.meta.json  conv-0009.jsonl  conv-0009.meta.json  conv-0010.jsonl  conv-0010.meta.json  conv-0013.jsonl  conv-0013.meta.json  conv-0014.jsonl  conv-0014.meta.json  conv-0015.jsonl  conv-0015.meta.json  conv-0016.jsonl  conv-0016.meta.json  conv-0017.jsonl  conv-0017.meta.json  conv-0018.jsonl  conv-0018.meta.json  conv-0019.jsonl  conv-0019.meta.json  conv-0020.jsonl  conv-0020.meta.json  conv-0021.jsonl  conv-0021.meta.json  conv-0022.jsonl  conv-0022.meta.json  (+1922 more)
ombh/synthetic-benchmark/ground-truth/: facts-ingested.json  facts.json  queries-full.json  queries-ingested.json  queries-sampled.json  statistics.json
ombh/synthetic-benchmark/personas/: personas.json
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/totalreclaw/: __init__.py  _smart_import.py  batch_gate.py  claims_helper.py  cli.py  client.py  confirm_indexed.py  credential_provider.py  credentials_wrap.py  crypto.py  embedding.py  entity_extract.py  grant.py  import_engine.py  import_state.py  keychain_wrap.py  lsh.py  memory_types.py  onboarding.py  operations.py  protobuf.py  recrystallize.py  relay.py  reranker.py  retype_setscope.py  session_segmentation.py  tuning_loop.py  update_notice.py  userop.py
python/src/totalreclaw/agent/: __init__.py  _text.py  contradiction.py  debrief.py  (+7 more)
python/tests/: conftest.py  cross_client_e2e.py  generate_py_vectors.py  test_agent_provenance.py  test_agent_tools_phrase_safety.py  test_auto_extract_uses_batch.py  test_batch_durability_431.py  test_batch_gate.py  test_batch_sizing_rc4.py  test_blob_metadata_f5.py  test_chain_id_autodetect.py  test_chatgpt_adapter_session_fidelity.py  test_claims_helper.py  test_cli_asyncio_shutdown_resilience.py  test_client.py  test_conversation_registry_f436.py  test_credential_provider.py  test_credentials_wrap.py  test_credentials_wrap_wiring.py  test_cross_client.py  test_crypto.py  test_crystal_gate_content_aware.py  test_crystal_session_id.py  test_debrief.py  test_debrief_tool.py  test_deploy_state_f435.py  test_embedding.py  test_embedding_codec_479.py  test_entity_extract.py  test_entity_trapdoor_roundtrip.py  test_env_binding_and_rc_banner.py  test_event_loop_lifecycle.py  test_export_tool.py  test_external_credentials_boot.py  test_extraction_empty_response_visibility.py  test_extraction_helpers.py  test_extractor.py  test_f16_embedding.py  test_gemini_adapter_formats.py  test_gemini_json_import_engine.py  (+120 more)
python/tests/e2e/: entity_trapdoor_staging_e2e.py  recrystallize_staging_e2e.py  update_notice_staging_e2e.py
python/tests/fixtures/: batch_calldata_vectors.json  batch_calldata_vectors.py  chatgpt-conversations.fixture.json  chatgpt-fixture-manifest.json  crypto_vectors.json  py_vectors.json
rust/totalreclaw-core/: CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  pyproject.toml
rust/totalreclaw-core/examples/: generate_kg_fixtures.rs
rust/totalreclaw-core/src/: blind.rs  claims.rs  confirm.rs  consolidation.rs  contradiction.rs  crypto.rs  debrief.rs  decision_log.rs  digest.rs  embedding_codec.rs  feedback_log.rs  fingerprint.rs  hotcache.rs  import_parsers.rs  kg_ffi.rs  lib.rs  lsh.rs  memory_types.rs  pin_intent.rs  prompts.rs  protobuf.rs  python.rs  recall_context.rs  reranker.rs  search.rs  secrets.rs  session_segmentation.rs  smart_import.rs  stemmer.rs  store.rs  userop.rs  wallet.rs  wasm.rs
rust/totalreclaw-core/tests/: python_parity_test.py  python_standalone_test.py  wasm_parity.mjs
rust/totalreclaw-memory/: CHANGELOG.md  Cargo.toml  README.md
rust/totalreclaw-memory/src/: backend.rs  billing.rs  blind.rs  crypto.rs  debrief.rs  embedding.rs  fingerprint.rs  hotcache.rs  lib.rs  lsh.rs  protobuf.rs  relay.rs  reranker.rs  search.rs  setup.rs  stemmer.rs  store.rs  userop.rs  wallet.rs
rust/totalreclaw-memory/tests/: e2e_spec_validation.rs  native_userop_e2e.rs  spec_compliance.rs  three_way_cross_client.rs  v1_taxonomy.rs  wallet_parity.rs
(+1329 files in other folders)
