[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ombh"
version = "0.1.0"
description = "TotalReclaw Benchmark Harness - Compare memory systems fairly"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "TotalReclaw Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ombh = "ombh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ombh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
