[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "totalreclaw"
version = "2.3.1"
description = "End-to-end encrypted memory for AI agents — Python client (Memory Taxonomy v1)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "TotalReclaw Team" }]
dependencies = [
    # Memory Taxonomy v1 + Retrieval v2 Tier 1 reranker live in core 2.0.
    # 2.3.0 lifts the floor to core 2.2.0 because agent/extraction.py now
    # imports the hoisted EXTRACTION_SYSTEM_PROMPT / COMPACTION_SYSTEM_PROMPT
    # via `totalreclaw_core.get_*_system_prompt`. Pre-2.2.0 core wheels do
    # NOT export those accessors and would fail at module import.
    # Upper bound stays at <3.0.0 to match the TypeScript clients'
    # `^2.0.0` semver semantics — a future core@3 will be a breaking
    # change and must bump this constraint in lockstep.
    "totalreclaw-core>=2.2.0,<3.0.0",
    "httpx>=0.27",
    "onnxruntime>=1.24",
    "numpy>=1.26",
    "PyStemmer>=2.2",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "eth-account>=0.13",
]

[project.optional-dependencies]
# hermes-agent is not on PyPI — install manually: pip install git+https://github.com/NousResearch/hermes-agent.git
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-xdist>=3.5", "mnemonic>=0.21"]

[project.entry-points."hermes_agent.plugins"]
totalreclaw = "totalreclaw.hermes"

[project.scripts]
# Hermes CLI for first-run onboarding ("hermes setup"). Mirrors the
# plugin 3.3.0 onboarding flow so users switching between OpenClaw and
# Hermes see the same branch question + recovery-phrase terminology.
hermes = "totalreclaw.hermes.cli:main"

[tool.setuptools.package-data]
"totalreclaw.hermes" = ["plugin.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
