[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "totalreclaw"
version = "2.3.1rc13"
description = "End-to-end encrypted memory for AI agents — Python client (Memory Taxonomy v1)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "TotalReclaw Team" }]
dependencies = [
    # Memory Taxonomy v1 + Retrieval v2 Tier 1 reranker live in core 2.0.
    # 2.3.0 lifts the floor to core 2.2.0 because agent/extraction.py now
    # imports the hoisted EXTRACTION_SYSTEM_PROMPT / COMPACTION_SYSTEM_PROMPT
    # via `totalreclaw_core.get_*_system_prompt`. Pre-2.2.0 core wheels do
    # NOT export those accessors and would fail at module import.
    # Upper bound stays at <3.0.0 to match the TypeScript clients'
    # `^2.0.0` semver semantics — a future core@3 will be a breaking
    # change and must bump this constraint in lockstep.
    "totalreclaw-core>=2.2.0,<3.0.0",
    "httpx>=0.27",
    "onnxruntime>=1.24",
    "numpy>=1.26",
    "PyStemmer>=2.2",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "eth-account>=0.13",
    # 2.3.1rc4 — QR-pair flow ports the TS plugin's x25519 + ChaCha20-Poly1305
    # AEAD handshake to Python so Hermes gains a phrase-safe setup path. The
    # `cryptography` library provides both primitives via a single well-
    # audited C backend (OpenSSL). Lower bound 42 matches the first release
    # with the Python-wrapped `ChaCha20Poly1305` that we rely on; upper
    # bound stays open — this is a security-critical dep that MUST track
    # upstream patches. Hybrid ML-KEM is deferred to rc.5 per the phrase-
    # safety rule's "document + ship pure x25519 for rc.4" carve-out.
    "cryptography>=42.0",
    # 2.3.1rc5 — QR rendering for the pair tool. ``qrcode`` is tiny and
    # pure-Python; the ``[pil]`` extra pulls in Pillow for PNG output.
    # Both Telegram-image and terminal-Unicode rendering fall out of this
    # one dep. See ``totalreclaw.pair.qr`` for the encoder wrappers.
    "qrcode[pil]>=7.4,<9",
    # 2.3.1rc10 — relay-brokered pair flow. Uses the ``websockets`` async
    # client to open a short-lived WS to ``wss://<relay>/pair/session/open``
    # and await the encrypted phrase upload. See
    # ``totalreclaw.pair.remote_client`` for the transport, and the
    # rc.10 blueprint in the internal repo for the full design.
    "websockets>=12.0,<14",
]

[project.optional-dependencies]
# hermes-agent is not on PyPI — install manually: pip install git+https://github.com/NousResearch/hermes-agent.git
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-xdist>=3.5", "mnemonic>=0.21"]

[project.entry-points."hermes_agent.plugins"]
totalreclaw = "totalreclaw.hermes"

[project.scripts]
# 2.3.1rc4 — canonical user-facing CLI. Only one console script is
# declared by this package: the colliding `hermes` binary (that would
# overwrite hermes-agent's own CLI on `pip install totalreclaw`) was
# REMOVED in rc.4 after rc.3 QA surfaced the "hermes gateway →
# invalid choice: 'gateway'" restart-loop bug. Users who want the
# Hermes-specific first-run wizard run `totalreclaw hermes-setup`
# (see `totalreclaw.cli:main` for the subcommand router).
totalreclaw = "totalreclaw.cli:main"

[tool.setuptools.package-data]
"totalreclaw.hermes" = ["plugin.yaml", "SKILL.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
