[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "totalreclaw-core"
version = "1.0.0"
description = "TotalReclaw crypto core — E2EE, LSH, blind indices, protobuf encoding (Rust)"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.maturin]
features = ["python"]
module-name = "totalreclaw_core"
