[package]
name = "totalreclaw-memory"
version = "0.1.0"
edition = "2021"
description = "TotalReclaw memory backend — E2EE crypto, LSH, embeddings, reranker"
license = "MIT"
repository = "https://github.com/p-diogo/totalreclaw"

[features]
default = []
local-embeddings = ["dep:ort", "dep:tokenizers"]

[dependencies]
# Crypto
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

# BIP-39
bip39 = "2"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Unicode
unicode-normalization = "0.1"

# Serialization (for fixtures, config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["rt", "macros"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Timestamps + UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }

# Error handling
thiserror = "2"

# Local embeddings (feature-gated)
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
