[package]
name = "totalreclaw-memory"
version = "0.1.0"
edition = "2021"
description = "TotalReclaw memory backend — E2EE crypto, LSH, embeddings, reranker"
license = "MIT"
repository = "https://github.com/p-diogo/totalreclaw"

[features]
default = []
local-embeddings = ["dep:ort", "dep:tokenizers"]

[dependencies]
# Core crypto primitives (shared with WASM/PyO3 builds)
totalreclaw-core = { path = "../totalreclaw-core", version = "2.0" }

# BIP-39 + CSPRNG (used by setup.rs for mnemonic generation)
bip39 = "2"
rand = "0.8"

# Ethereum / ERC-4337 (signing key for submit_userop, keccak for EOA derivation)
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2", features = ["keccak"] }

# Encoding (still needed by wallet, userop, store, search)
base64 = "0.22"
hex = "0.4"

# Serialization (for fixtures, config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["rt", "macros", "time"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Timestamps + UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }

# Error handling
thiserror = "2"

# Local embeddings (feature-gated)
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
